--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <title>AM6 Software Company</title>
-        <meta name="description" content="" />
-        <meta name="keywords" content="" />
-        <meta name="author" content="AM6" />
+        <meta name="description" content="">
 
         <!--  FavIcon  -->
         <link rel="shortcut icon" href="assets/img/am6-logo.png">
@@ -256,7 +254,8 @@
                                  <li class="list-inline-item"><a class="text-white" href="https://www.facebook.com/AM6Page"><i class="lni-facebook-filled text-dark mr-2"></i></a></li>
                                  <li class="list-inline-item"><a class="text-white" href="https://github.com/orgs/AM6SoftwareCompany"><i class="lni-github-original text-dark mr-2"></i></a></li>
                              </ul>
-                             <p class="pl-3 text-dark">Copyright © 2020 AM6</a></p>
+                             <p class="pl-3 text-dark">Copyright &copy;
+                                <script>document.write(new Date().getFullYear());</script> AM6</a></p>
                          </div>
                      </div>
                  </div>
