--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <title>AM6 Software Company</title>
-        <meta name="description" content="">
+        <meta name="description" content="160">
 
         <!--  FavIcon  -->
         <link rel="shortcut icon" href="assets/img/am6-logo.png">
@@ -54,13 +54,13 @@
                                          </ul>
                                          <ul class="list-group contact-info text-left mb-0">
                                              <li class="list-group-item"><span>Contact Info :</span></li>
-                                             <li class="list-group-item"><span><i class="lni-map-marker"></i> Deir Al Naheya, Qism Banha, Banha, Egypt</span></li>
+                                             <li class="list-group-item"><span><i class="lni-map-marker"></i> Banha, Egypt</span></li>
                                              <li class="list-group-item"><span><i class="lni-phone-handset"></i> +20 155 305 7088</span></li>
                                              <li class="list-group-item"><span>Follow us :</span></li>
                                              <li class="list-group-item">
                                                  <ul class="list-inline socails">
-                                                    <li class="list-inline-item"><a href="https://www.facebook.com/AM6Page"><i class="lni-facebook-filled"></i></a></li>
-                                                    <li class="list-inline-item"><a href="https://github.com/orgs/AM6SoftwareCompany"><i class="lni-github-original"></i></a></li>
+                                                    <li class="list-inline-item"><a target="_blank" href="https://www.facebook.com/AM6Page"><i class="lni-facebook-filled"></i></a></li>
+                                                    <li class="list-inline-item"><a target="_blank" href="https://github.com/AM6SoftwareCompany"><i class="lni-github-original"></i></a></li>
                                                 </ul>
                                              </li>
                                          </ul>
@@ -91,12 +91,12 @@
                             <div class="col-lg-12">
                                 <div class="hero-content">
                                     <h1 class="text-dark mb-3">AM6 Software Company</h1>
-                                    <h4 class="text-dark text-capitalize mb-0"><span class="base-color">A  </span> <span class="element" data-elements=".,full stack Web Developers.,graphic designers., multi-platform application developers."></span></h4>
-                                    <p class="text-dark max-width-450 mx-0 my-4">In a professional context it often happens that private clients order a publication to be made.</p>
+                                    <h5 class="text-dark text-capitalize mb-0"><span class="base-color">The best  </span> <span class="element" data-elements=".,full stack Web Developers.,graphic designers., multi-platform application developers."></span></h5>
+                                    <p class="text-dark max-width-450 mx-0 my-4">Just imagine and we will get it done. We provide. We Share. We help.</p>
                                     <div>
                                         <ul class="list-inline social-icon mt-2">
-                                            <li class="list-inline-item"><a href="https://www.facebook.com/AM6Page"><i class="lni-facebook-filled text-dark"></i></a></li>
-                                            <li class="list-inline-item"><a href="https://github.com/orgs/AM6SoftwareCompany"><i class="lni-github-original text-dark"></i></a></li>
+                                            <li class="list-inline-item"><a target="_blank" href="https://www.facebook.com/AM6Page"><i class="lni-facebook-filled text-dark"></i></a></li>
+                                            <li class="list-inline-item"><a target="_blank" href="https://github.com/AM6SoftwareCompany"><i class="lni-github-original text-dark"></i></a></li>
                                         </ul>
                                     </div>
                                 </div>
@@ -128,12 +128,12 @@
                                         <p class="text-dark">Founded : <span class="text-gray"> 24 March 2020</span></p>
                                         <p class="text-dark">Phone : <span class="text-gray">+20 155 305 7088</span></p>
                                         <p class="text-dark">City : <span class="text-gray"> Benha, Egypt</span></p>
-                                        <p class="text-dark">Freelance : <span class="text-gray">Available</span></p>
+                                        <p class="text-dark">Mail : <span class="text-gray">ahmedmohammedabo6@gmail.com</span></p>
                                     </div>
                                 </div>
                                 <div class="row">
                                     <div class="col-12">
-                                        <a href="https://m.me/AM6Page" class="pill-button mt-3 mb-lg-0">Send Message</a>
+                                        <a href="https://m.me/AM6Page" target="_blank" class="pill-button mt-3 mb-lg-0">Send Message</a>
                                     </div>
                                 </div>
                             </div>
@@ -161,15 +161,15 @@
                              </div>
                          </div>
                          <div class="row mt-4">
-                             <!-- Item 01 -->
+                         	<!-- Item 01 -->
                              <div class="col-lg-4 text-left">
                                  <div class="services-item">
                                      <div class="float-left mt-lg-1 d-inline-block services-icon">
-                                         <i class="lni-brush-alt size-md base-color"></i>
+                                         <i class="lni-world size-md base-color mb-0"></i>
                                      </div>
                                      <div class="services-content">
-                                         <h5 class="mb-3">Graphic Design</h5>
-                                         <p class="text-muted mb-0">In a professional context it often happens that private clients corder a publication to be made.</p>
+                                         <h5 class="mb-3">Go Beyond Limits</h5>
+                                         <p class="text-muted mb-0">Everybody is interested to have their own website and we are here for that.</p>
                                      </div>
                                  </div>
                              </div>
@@ -177,15 +177,27 @@
                              <div class="col-lg-4 text-left">
                                  <div class="services-item">
                                      <div class="float-left mt-lg-1 d-inline-block services-icon">
-                                         <i class="lni-check-mark-circle size-md base-color"></i>
+                                         <i class="lni-brush-alt size-md base-color"></i>
                                      </div>
                                      <div class="services-content">
-                                         <h5 class="mb-3">Bootstrap support</h5>
-                                         <p class="text-muted mb-0">In a professional context it often happens that private clients corder a publication to be made.</p>
+                                         <h5 class="mb-3">Graphic Design</h5>
+                                         <p class="text-muted mb-0">With your Vision, we create the best imagined designs.</p>
                                      </div>
                                  </div>
                              </div>
                              <!-- Item 03 -->
+                             <div class="col-lg-4 text-left">
+                                 <div class="services-item">
+                                     <div class="float-left mt-lg-1 d-inline-block services-icon">
+                                         <i class="lni-check-mark-circle size-md base-color"></i>
+                                     </div>
+                                     <div class="services-content">
+                                         <h5 class="mb-3">Soical Media Marketing</h5>
+                                         <p class="text-muted mb-0">We provide assistant in anyway that can get you customers and SMMs are good for that.</p>
+                                     </div>
+                                 </div>
+                             </div>
+                             <!-- Item 04 -->
                              <div class="col-lg-4 text-left">
                                  <div class="services-item">
                                      <div class="float-left mt-lg-1 d-inline-block services-icon">
@@ -194,6 +206,30 @@
                                      <div class="services-content">
                                          <h5 class="mb-3">Portfolio of works</h5>
                                          <p class="text-muted mb-0">In a professional context it often happens that private clients corder a publication to be made.</p>
+                                     </div>
+                                 </div>
+                             </div>
+                             <!-- Item 05 -->
+                             <div class="col-lg-4 text-left">
+                                 <div class="services-item">
+                                     <div class="float-left mt-lg-1  d-inline-block services-icon">
+                                         <i class="lni-mobile size-md base-color"></i>
+                                     </div>
+                                     <div class="services-content">
+                                         <h5 class="mb-3">Learn The Web</h5>
+                                         <p class="text-muted mb-0">We do not hold to our inventions,skills or knowledge. We share it and happy to teach you!</p>
+                                     </div>
+                                 </div>
+                             </div>
+                             <!-- Item 06 -->
+                             <div class="col-lg-4 text-left">
+                                 <div class="services-item">
+                                     <div class="float-left mt-lg-1 d-inline-block services-icon">
+                                         <i class="lni-cup size-md base-color"></i>
+                                     </div>
+                                     <div class="services-content">
+                                         <h5 class="mb-3">StartUps</h5>
+                                         <p class="text-muted mb-0">We provide a free assistant to a good idea-startup only marketing required.</p>
                                      </div>
                                  </div>
                              </div>
@@ -222,15 +258,17 @@
                         </div>
                         <div class="row mt-5">
                             <div class="col-lg-6">
-                                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d859.6795833285344!2d31.190094829186236!3d30.47241515472075!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMzDCsDI4JzIwLjciTiAzMcKwMTEnMjYuMyJF!5e0!3m2!1sen!2seg!4v1595207375489!5m2!1sen!2seg" width="400" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d55027.07928076501!2d31.153402012744724!3d30.458986510473785!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x145875f6592ee989%3A0xa0f7a3872335c0ce!2sBanha%2C%20Qism%20Banha%2C%20Banha%2C%20Al%20Qalyubia%20Governorate!5e0!3m2!1sen!2seg!4v1596861203491!5m2!1sen!2seg" width="400" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
                             </div>
                             <div class="col-lg-6 text-left">
                                 <div class="contact-form">
                                     <h6 class="font-weight-semibold">Let’s Get Work With Me </h6>
-                                    <p class="text-muted mt-3">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore. Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
+                                    <p class="text-muted mt-3">AM6 is a software company that works in web applications with great staff. 1 year in the local market, many years in the global Market. We provide. We Share. We help.</p>
                                     <div class="mt-4">
-                                        <p class="mt-2 font-weight-bold"> Address : <span class="text-muted"> Deir Al Naheya, Qism Banha, Banha, Egypt</span></p>
+                                        <p class="mt-2 font-weight-bold"> Address : <span class="text-muted"> Banha, Egypt</span></p>
                                         <p class="mt-2 font-weight-bold"> Phone : <span class="text-muted"> +20 155 305 7088</span></p>
+                                        <p class="mt-2 font-weight-bold"> Mail : <span class="text-muted"> ahmedmohammedabo6@gmail.com</span></p>
+                                        <p class="mt-2 font-weight-bold"> Web : <span class="text-muted"><a href="index.html">am6.tech</a> </span></p>
                                     </div>
                                 </div>
                             </div>
@@ -249,10 +287,10 @@
                              <p class="text-dark">Footer</p>
                          </div>
                          <div class="text-center m-auto">
-                             <p class="text-dark size-sm">A<span class="base-color">M6</span></p>
+                             <p class="text-dark size-sm">AM6 <span class="base-color">Software Company</span></p>
                              <ul class="list-inline socails">
-                                 <li class="list-inline-item"><a class="text-white" href="https://www.facebook.com/AM6Page"><i class="lni-facebook-filled text-dark mr-2"></i></a></li>
-                                 <li class="list-inline-item"><a class="text-white" href="https://github.com/orgs/AM6SoftwareCompany"><i class="lni-github-original text-dark mr-2"></i></a></li>
+                                 <li class="list-inline-item"><a class="text-white" target="_blank" href="https://www.facebook.com/AM6Page"><i class="lni-facebook-filled text-dark mr-2"></i></a></li>
+                                 <li class="list-inline-item"><a class="text-white" target="_blank" href="https://github.com/AM6SoftwareCompany"><i class="lni-github-original text-dark mr-2"></i></a></li>
                              </ul>
                              <p class="pl-3 text-dark">Copyright &copy;
                                 <script>document.write(new Date().getFullYear());</script> AM6</a></p>
