--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <title>AM6 Software Company</title>
-        <meta name="description" content="160">
+        <meta name="description" content="AM6 is a software company that works in web applications with great staff. 1 year in the local market, many years in the global Market. We provide. We help.">
 
         <!--  FavIcon  -->
         <link rel="shortcut icon" href="assets/img/am6-logo.png">
