--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         <link rel="stylesheet" type="text/css" href="assets/css/plugins.css">
         <!--  Custom Style CSS  -->
         <link rel="stylesheet" href="assets/css/style.css">
+        <!-- AdSense -->
+        <script data-ad-client="ca-pub-4269187631958665" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
     </head>
     <body class="pilling-page mono"  data-spy="scroll" data-target="#scrollspy" data-offset="1">
