from png tp ico

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="description" content="AM6 is a software company that works in web applications with great staff. 1 year in the local market, many years in the global Market. We provide. We help.">
 
         <!--  FavIcon  -->
-        <link rel="shortcut icon" href="assets/img/am6-logo.png">
+        <link rel="shortcut icon" href="assets/img/am6-logo.ico">
 
         <!-- Google Fonts -->
 		<link href="https://fonts.googleapis.com/css?family=Muli:400,600" rel="stylesheet">
