changed to info@am6.tech

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                                         <p class="text-dark">Founded : <span class="text-gray"> 24 March 2020</span></p>
                                         <p class="text-dark">Phone : <span class="text-gray">+20 155 305 7088</span></p>
                                         <p class="text-dark">City : <span class="text-gray"> Benha, Egypt</span></p>
-                                        <p class="text-dark">Mail : <span class="text-gray">ahmedmohammedabo6@gmail.com</span></p>
+                                        <p class="text-dark">Mail : <span class="text-gray">info@am6.tech</span></p>
                                     </div>
                                 </div>
                                 <div class="row">
@@ -269,7 +269,7 @@
                                     <div class="mt-4">
                                         <p class="mt-2 font-weight-bold"> Address : <span class="text-muted"> Banha, Egypt</span></p>
                                         <p class="mt-2 font-weight-bold"> Phone : <span class="text-muted"> +20 155 305 7088</span></p>
-                                        <p class="mt-2 font-weight-bold"> Mail : <span class="text-muted"> ahmedmohammedabo6@gmail.com</span></p>
+                                        <p class="mt-2 font-weight-bold"> Mail : <span class="text-muted"> info@am6.tech</span></p>
                                         <p class="mt-2 font-weight-bold"> Web : <span class="text-muted"><a href="index.html">am6.tech</a> </span></p>
                                     </div>
                                 </div>
