full about us page

--- a/index.html
+++ b/index.html
@@ -125,17 +125,71 @@
                             </div>
                             <div class="col-lg-6 personal-item  mb-4 mb-lg-0">
                                 <h2 class="text-dark mb-2">About <span class="base-color">Us</span></h2>
+                                <h5 class="text-dark mb-3">Hello We are AM6!</h5>
                                 <div class="row">
                                     <div class="col-lg-5 col-sm-6 personal-info">
-                                        <p class="text-dark">Founded : <span class="text-gray"> 24 March 2020</span></p>
+                                        <p class="text-dark">Shortcut : <span class="text-gray"> <span class="base-color">A</span>hmed<span class="base-color">M</span>ohammedAbo<span class="base-color">6</span></span></p>
                                         <p class="text-dark">Phone : <span class="text-gray">+20 155 305 7088</span></p>
-                                        <p class="text-dark">City : <span class="text-gray"> Benha, Egypt</span></p>
+                                        <p class="text-dark">Country : <span class="text-gray"> Egypt</span></p>
                                         <p class="text-dark">Mail : <span class="text-gray">info@am6.tech</span></p>
+                                    </div>
+                                    <div class="col-lg-5 col-sm-6 personal-info">
+                                        <p class="text-dark">Web : <span class="text-gray"> <a href="index.html">am6.tech</a></span></p>
+                                        <p class="text-dark">Founded : <span class="text-gray"> 24 March 2020</span></p>
+                                        <p class="text-dark">City : <span class="text-gray"> Benha</span></p>
+                                        <p class="text-dark">Freelance : <span class="text-gray">Available</span></p>
                                     </div>
                                 </div>
                                 <div class="row">
                                     <div class="col-12">
-                                        <a href="https://m.me/AM6Page" target="_blank" class="pill-button mt-3 mb-lg-0">Send Message</a>
+                                        <a href="https://m.me/AM6Page" target="_blank" class="pill-button mt-3 mb-lg-0">FB Message</a>
+                                        <a href="https://wa.me/message/DHHZNWIU4BNGK1" target="_blank" class="pill-button mt-3 mb-lg-0">Whatsapp Message</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div id="count-up" class="text-center">
+                            <div class="container">
+                                <div class="row mt-4">
+                                    <!-- Item-01 -->
+                                    <div class="col-6 col-md-3 mt-5 mb-md-0 count-item">
+                                        <div class="count-icon">
+                                            <i class="lni-download size-md"></i>
+                                        </div>
+                                        <div class="count-content">
+                                            <span class="timer count-number" data-from="0" data-to="28" data-speed="5000">28</span>
+                                        </div>
+                                        <p class="mb-0 ">Files Download</p>
+                                    </div>
+                                    <!-- Item-02 -->
+                                    <div class="col-6 col-md-3 mt-5 mb-md-0 count-item">
+                                        <div class="count-icon">
+                                            <i class="lni-pencil-alt size-md"></i>
+                                        </div>
+                                        <div class="count-content">
+                                            <span class="timer count-number" data-from="0" data-to="11" data-speed="4000">11</span>
+                                        </div>
+                                        <p class="mb-0">Project Done</p>
+                                    </div>
+                                    <!-- Item-03 -->
+                                    <div class="col-6 col-md-3 mt-5 mb-md-0 count-item">
+                                        <div class="count-icon">
+                                            <i class="lni-medall size-md"></i>
+                                        </div>
+                                        <div class="count-content">
+                                            <span class="timer count-number" data-from="0" data-to="3" data-speed="2000">3</span>
+                                        </div>
+                                        <p class="mb-0">Get Award</p>
+                                    </div>
+                                    <!-- Item-04 -->
+                                    <div class="col-6 col-md-3 mt-5 mb-md-0 count-item">
+                                        <div class="count-icon">
+                                            <i class="lni-emoji-smile size-md"></i>
+                                        </div>
+                                        <div class="count-content">
+                                            <span class="timer count-number" data-from="0" data-to="6" data-speed="3000">6</span>
+                                        </div>
+                                        <p class="mb-0">Happy Client</p>
                                     </div>
                                 </div>
                             </div>
@@ -145,6 +199,7 @@
                 </div>
             </section>
             <!--    About End    -->
+
 
              <!--   Services Start   -->
              <section id="services" class="section pp-scrollable services" data-navigation-color="#fff" data-navigation-tooltip="SERVICES">
