finished full about us page

--- a/index.html
+++ b/index.html
@@ -128,13 +128,13 @@
                                 <h5 class="text-dark mb-3">Hello We are AM6!</h5>
                                 <div class="row">
                                     <div class="col-lg-5 col-sm-6 personal-info">
-                                        <p class="text-dark">Shortcut : <span class="text-gray"> <span class="base-color">A</span>hmed<span class="base-color">M</span>ohammedAbo<span class="base-color">6</span></span></p>
-                                        <p class="text-dark">Phone : <span class="text-gray">+20 155 305 7088</span></p>
+                                        <p class="text-dark"> <span style="color: #198eff;">A</span>hmed<span style="color: #198eff;">M</span>ohammedAbo<span style="color: #198eff;">6</span></p>
+                                        <p class="text-dark">Phone : <span class="text-gray">+201553057088</span></p>
                                         <p class="text-dark">Country : <span class="text-gray"> Egypt</span></p>
                                         <p class="text-dark">Mail : <span class="text-gray">info@am6.tech</span></p>
                                     </div>
                                     <div class="col-lg-5 col-sm-6 personal-info">
-                                        <p class="text-dark">Web : <span class="text-gray"> <a href="index.html">am6.tech</a></span></p>
+                                        <p class="text-dark">Website : <span class="text-gray"> <a href="index.html">am6.tech</a></span></p>
                                         <p class="text-dark">Founded : <span class="text-gray"> 24 March 2020</span></p>
                                         <p class="text-dark">City : <span class="text-gray"> Benha</span></p>
                                         <p class="text-dark">Freelance : <span class="text-gray">Available</span></p>
@@ -142,7 +142,7 @@
                                 </div>
                                 <div class="row">
                                     <div class="col-12">
-                                        <a href="https://m.me/AM6Page" target="_blank" class="pill-button mt-3 mb-lg-0">FB Message</a>
+                                        <a href="https://m.me/AM6Page" target="_blank" class="pill-button mt-3 mb-lg-0 mr-4">FB Message</a>
                                         <a href="https://wa.me/message/DHHZNWIU4BNGK1" target="_blank" class="pill-button mt-3 mb-lg-0">Whatsapp Message</a>
                                     </div>
                                 </div>
@@ -177,7 +177,7 @@
                                             <i class="lni-medall size-md"></i>
                                         </div>
                                         <div class="count-content">
-                                            <span class="timer count-number" data-from="0" data-to="3" data-speed="2000">3</span>
+                                            <span class="timer count-number" data-from="0" data-to="3" data-speed="4000">3</span>
                                         </div>
                                         <p class="mb-0">Get Award</p>
                                     </div>
@@ -187,7 +187,7 @@
                                             <i class="lni-emoji-smile size-md"></i>
                                         </div>
                                         <div class="count-content">
-                                            <span class="timer count-number" data-from="0" data-to="6" data-speed="3000">6</span>
+                                            <span class="timer count-number" data-from="0" data-to="6" data-speed="4000">6</span>
                                         </div>
                                         <p class="mb-0">Happy Client</p>
                                     </div>
