--- a/index.html
+++ b/index.html
@@ -113,7 +113,8 @@
                                          <ul class="list-group text-left" id="myMenu">
                                              <li data-menuanchor="hero" class="list-group-item"><a href="#hero">Home</a></li>
                                              <li data-menuanchor="about" class="list-group-item"><a href="#about">About us</a></li>
-                                             <li data-menuanchor="services" class="list-group-item"><a href="#services">Services</a></li>
+                                             <li data-menuanchor="services" class="list-group-item"><a href="#services">Our Services</a></li>
+                                             <li data-menuanchor="portfolio" class="list-group-item"><a href="#portfolio">Portfolio</a></li>
                                              <li data-menuanchor="contact" class="list-group-item"><a href="#contact">Contact Us</a></li>
 
                                          </ul>
@@ -126,6 +127,9 @@
                                                  <ul class="list-inline socails">
                                                     <li class="list-inline-item"><a target="_blank" href="https://www.facebook.com/AM6Page"><i class="lni-facebook-filled"></i></a></li>
                                                     <li class="list-inline-item"><a target="_blank" href="https://github.com/AM6SoftwareCompany"><i class="lni-github-original"></i></a></li>
+                                                    <li class="list-inline-item"><a target="_blank" href="https://wa.me/message/DHHZNWIU4BNGK1"><i class="lni lni-whatsapp"></i></a></li>
+                                                    <li class="list-inline-item"><a target="_blank" href="https://t.me/AM6SoftwareCom"><i class="lni lni-telegram"></i></a></li>
+                                                    <li class="list-inline-item"><a target="_blank" href="https://www.youtube.com/channel/UC19awzqdNbZmDHb6mXrTrFQ"><i class="lni lni-youtube"></i></a></li>
                                                 </ul>
                                              </li>
                                          </ul>
@@ -667,6 +671,9 @@
                              <ul class="list-inline socails">
                                  <li class="list-inline-item"><a class="text-white" target="_blank" href="https://www.facebook.com/AM6Page"><i class="lni-facebook-filled text-dark mr-2"></i></a></li>
                                  <li class="list-inline-item"><a class="text-white" target="_blank" href="https://github.com/AM6SoftwareCompany"><i class="lni-github-original text-dark mr-2"></i></a></li>
+                                 <li class="list-inline-item"><a class="text-white" target="_blank" href="https://wa.me/message/DHHZNWIU4BNGK1"><i class="lni lni-whatsapp text-dark"></i></a></li>
+                                 <li class="list-inline-item"><a class="text-white" target="_blank" href="https://t.me/AM6SoftwareCom"><i class="lni lni-telegram text-dark"></i></a></li>
+                                 <li class="list-inline-item"><a class="text-white" target="_blank" href="https://www.youtube.com/channel/UC19awzqdNbZmDHb6mXrTrFQ"><i class="lni lni-youtube text-dark"></i></a></li>
                              </ul>
                              <p class="pl-3 text-dark">Copyright &copy;
                                 <script>document.write(new Date().getFullYear());</script> AM6</a></p>
