added icons to home page

--- a/index.html
+++ b/index.html
@@ -166,6 +166,9 @@
                                         <ul class="list-inline social-icon mt-2">
                                             <li class="list-inline-item"><a target="_blank" href="https://www.facebook.com/AM6Page"><i class="lni-facebook-filled text-dark"></i></a></li>
                                             <li class="list-inline-item"><a target="_blank" href="https://github.com/AM6SoftwareCompany"><i class="lni-github-original text-dark"></i></a></li>
+                                            <li class="list-inline-item"><a target="_blank" href="https://wa.me/message/DHHZNWIU4BNGK1"><i class="lni lni-whatsapp text-dark"></i></a></li>
+                                            <li class="list-inline-item"><a target="_blank" href="https://t.me/AM6SoftwareCom"><i class="lni lni-telegram text-dark"></i></a></li>
+                                            <li class="list-inline-item"><a target="_blank" href="https://www.youtube.com/channel/UC19awzqdNbZmDHb6mXrTrFQ"><i class="lni lni-youtube text-dark"></i></a></li>
                                         </ul>
                                     </div>
                                 </div>
