corrected some E mistakes

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                                         <p class="text-dark">Mail : <span class="text-gray">info@am6.tech</span></p>
                                     </div>
                                     <div class="col-lg-5 col-sm-6 personal-info">
-                                        <p class="text-dark">Website : <span class="text-gray"> <a href="index.html">am6.tech</a></span></p>
+                                        <p class="text-dark">Website : <span class="text-gray"> <a href="/">am6.tech</a></span></p>
                                         <p class="text-dark">Founded : <span class="text-gray"> 24 March 2020</span></p>
                                         <p class="text-dark">City : <span class="text-gray"> Benha</span></p>
                                         <p class="text-dark">Freelance : <span class="text-gray">Available</span></p>
@@ -239,7 +239,7 @@
                                         <div class="count-content">
                                             <span class="timer count-number" data-from="0" data-to="11" data-speed="4000">11</span>
                                         </div>
-                                        <p class="mb-0">Project Done</p>
+                                        <p class="mb-0">Projects Done</p>
                                     </div>
                                     <!-- Item-03 -->
                                     <div class="col-6 col-md-3 mt-5 mb-md-0 count-item">
@@ -259,7 +259,7 @@
                                         <div class="count-content">
                                             <span class="timer count-number" data-from="0" data-to="6" data-speed="4000">6</span>
                                         </div>
-                                        <p class="mb-0">Happy Client</p>
+                                        <p class="mb-0">Happy Clients</p>
                                     </div>
                                 </div>
                             </div>
@@ -296,7 +296,7 @@
                                      </div>
                                      <div class="services-content">
                                          <h5 class="mb-3">Go Beyond Limits</h5>
-                                         <p class="text-muted mb-0">Everybody is interested to have their own website and we are here for that.</p>
+                                         <p class="text-muted mb-0">Everybody is interested to have their website and we are here for that.</p>
                                      </div>
                                  </div>
                              </div>
@@ -308,7 +308,7 @@
                                      </div>
                                      <div class="services-content">
                                          <h5 class="mb-3">Graphic Design</h5>
-                                         <p class="text-muted mb-0">With your Vision, we create the best imagined designs.</p>
+                                         <p class="text-muted mb-0">With your Vision, we create the best-imagined designs.</p>
                                      </div>
                                  </div>
                              </div>
@@ -319,8 +319,8 @@
                                          <i class="lni-check-mark-circle size-md base-color"></i>
                                      </div>
                                      <div class="services-content">
-                                         <h5 class="mb-3">Soical Media Marketing</h5>
-                                         <p class="text-muted mb-0">We provide assistant in anyway that can get you customers and SMMs are good for that.</p>
+                                         <h5 class="mb-3">Social Media Marketing</h5>
+                                         <p class="text-muted mb-0">We provide assistant in any way that can get you customers and SMMs are good for that.</p>
                                      </div>
                                  </div>
                              </div>
@@ -332,7 +332,7 @@
                                      </div>
                                      <div class="services-content">
                                          <h5 class="mb-3">Portfolio of works</h5>
-                                         <p class="text-muted mb-0">In a professional context it often happens that private clients corder a publication to be made.</p>
+                                         <p class="text-muted mb-0">In a professional context, it often happens that private clients corder a publication to be made.</p>
                                      </div>
                                  </div>
                              </div>
@@ -344,7 +344,7 @@
                                      </div>
                                      <div class="services-content">
                                          <h5 class="mb-3">Learn The Web</h5>
-                                         <p class="text-muted mb-0">We do not hold to our inventions,skills or knowledge. We share it and happy to teach you!</p>
+                                         <p class="text-muted mb-0">We do not hold to our inventions, skills, or knowledge. We share it and happy to teach you!</p>
                                      </div>
                                  </div>
                              </div>
@@ -356,7 +356,7 @@
                                      </div>
                                      <div class="services-content">
                                          <h5 class="mb-3">StartUps</h5>
-                                         <p class="text-muted mb-0">We provide a free assistant to a good idea-startup only marketing required.</p>
+                                         <p class="text-muted mb-0">We provide free assistant to a good idea-startup only marketing required.</p>
                                      </div>
                                  </div>
                              </div>
@@ -630,7 +630,7 @@
                         <div class="container">
                         <div class="row">
                             <div class="title-small">
-                                <p class="text-dark">Get in Touch</p>
+                                <p class="text-dark">Get In Touch</p>
                             </div>
                             <div class="col-lg-12">
                                 <div class="text-left">
@@ -645,13 +645,13 @@
                             </div>
                             <div class="col-lg-6 text-left">
                                 <div class="contact-form">
-                                    <h6 class="font-weight-semibold">Let’s Get Work With Me </h6>
-                                    <p class="text-muted mt-3">AM6 is a software company that works in web applications with great staff. 1 year in the local market, many years in the global Market. We provide. We Share. We help.</p>
+                                    <h6 class="font-weight-semibold">Let’s Get to Work With Us </h6>
+                                    <p class="text-muted mt-3">AM6 is a software company that works in web applications with great staff. 1 year in the local market, many years in the global market. We provide. We Share. We help.</p>
                                     <div class="mt-4">
                                         <p class="mt-2 font-weight-bold"> Address : <span class="text-muted"> Banha, Egypt</span></p>
                                         <p class="mt-2 font-weight-bold"> Phone : <span class="text-muted"> +20 155 305 7088</span></p>
                                         <p class="mt-2 font-weight-bold"> Mail : <span class="text-muted"> info@am6.tech</span></p>
-                                        <p class="mt-2 font-weight-bold"> Web : <span class="text-muted"><a href="index.html">am6.tech</a> </span></p>
+                                        <p class="mt-2 font-weight-bold"> Web : <span class="text-muted"><a href="/">am6.tech</a> </span></p>
                                     </div>
                                 </div>
                             </div>
