made a youtube.html

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                                                     <li class="list-inline-item"><a target="_blank" href="https://github.com/AM6SoftwareCompany"><i class="lni-github-original"></i></a></li>
                                                     <li class="list-inline-item"><a target="_blank" href="https://wa.me/message/DHHZNWIU4BNGK1"><i class="lni lni-whatsapp"></i></a></li>
                                                     <li class="list-inline-item"><a target="_blank" href="https://t.me/AM6SoftwareCom"><i class="lni lni-telegram"></i></a></li>
-                                                    <li class="list-inline-item"><a target="_blank" href="https://www.youtube.com/channel/UC19awzqdNbZmDHb6mXrTrFQ"><i class="lni lni-youtube"></i></a></li>
+                                                    <li class="list-inline-item"><a target="_blank" href="youtube.html"><i class="lni lni-youtube"></i></a></li>
                                                 </ul>
                                              </li>
                                          </ul>
@@ -168,7 +168,7 @@
                                             <li class="list-inline-item"><a target="_blank" href="https://github.com/AM6SoftwareCompany"><i class="lni-github-original text-dark"></i></a></li>
                                             <li class="list-inline-item"><a target="_blank" href="https://wa.me/message/DHHZNWIU4BNGK1"><i class="lni lni-whatsapp text-dark"></i></a></li>
                                             <li class="list-inline-item"><a target="_blank" href="https://t.me/AM6SoftwareCom"><i class="lni lni-telegram text-dark"></i></a></li>
-                                            <li class="list-inline-item"><a target="_blank" href="https://www.youtube.com/channel/UC19awzqdNbZmDHb6mXrTrFQ"><i class="lni lni-youtube text-dark"></i></a></li>
+                                            <li class="list-inline-item"><a target="_blank" href="youtube.html"><i class="lni lni-youtube text-dark"></i></a></li>
                                         </ul>
                                     </div>
                                 </div>
@@ -676,7 +676,7 @@
                                  <li class="list-inline-item"><a class="text-white" target="_blank" href="https://github.com/AM6SoftwareCompany"><i class="lni-github-original text-dark mr-2"></i></a></li>
                                  <li class="list-inline-item"><a class="text-white" target="_blank" href="https://wa.me/message/DHHZNWIU4BNGK1"><i class="lni lni-whatsapp text-dark"></i></a></li>
                                  <li class="list-inline-item"><a class="text-white" target="_blank" href="https://t.me/AM6SoftwareCom"><i class="lni lni-telegram text-dark"></i></a></li>
-                                 <li class="list-inline-item"><a class="text-white" target="_blank" href="https://www.youtube.com/channel/UC19awzqdNbZmDHb6mXrTrFQ"><i class="lni lni-youtube text-dark"></i></a></li>
+                                 <li class="list-inline-item"><a class="text-white" target="_blank" href="youtube.html"><i class="lni lni-youtube text-dark"></i></a></li>
                              </ul>
                              <p class="pl-3 text-dark">Copyright &copy;
                                 <script>document.write(new Date().getFullYear());</script> AM6</a></p>
