--- a/youtube.html
+++ b/youtube.html
@@ -18,6 +18,6 @@
 			}
 			</script>
 
-			<a id="bu" href="https://www.youtube.com/channel/UC19awzqdNbZmDHb6mXrTrFQ?sub_confirmation=1"> </a>
+			<a id="bu" href="https://m.youtube.com/channel/UC19awzqdNbZmDHb6mXrTrFQ?sub_confirmation=1"> </a>
 	</body>
 </html>
