noor heroku=>github pages

--- a/noor.html
+++ b/noor.html
@@ -18,6 +18,6 @@
 			}
 		</script>
 
-			<a id="bu" href="http://noor-br.herokuapp.com/"> </a>
+			<a id="bu" href="https://am6softwarecompany.github.io/noor/"> </a>
 	</body>
 </html>
